--- a/ticTacToe.html
+++ b/ticTacToe.html
@@ -15,6 +15,10 @@
 
     <div class="container-fluid">
         <h1>Tic-Tac-Toe</h1>
+        <div>
+            <button id="onePlayer" class = "playerSelectors">One Player</button>
+            <button id="twoPlayer" class = "playerSelectors">Two Players</button>
+        </div>
         <h2 id="textBox">Get three in a row!</h2>
         <button id="newGame">New Game</button>
         <div class="board text-center">
