Simon is functional. Still need update so each user input will check against array, not just wait until the the arrays are the same length before showing 'game over'.

--- a/simon.html
+++ b/simon.html
@@ -9,14 +9,14 @@
 
 <body>
 	<div class="gameDiv">
-		<button class="colorButton red" id="red"></button>
-		<button class="colorButton yellow" id="yellow"></button>
-		<button class="colorButton blue" id="blue"></button>
-		<button class="colorButton green" id="green"></button>
+		<button class="colorButton" id="red"></button>
+		<button class="colorButton" id="yellow"></button>
+		<button class="colorButton" id="blue"></button>
+		<button class="colorButton" id="green"></button>
 		<div id="centerCircle">
 
 		</div>
-		<h2 id="screen">GAME OVER</h2>
+		<h2 id="screen">SIMON</h2>
 		<button id="start" class="menuButtons">Start</button>
 	</div>
 
