--- a/public/index.html
+++ b/public/index.html
@@ -13,8 +13,8 @@
 
     <nav>
       <ul>
-        <li>LINK TO FIRST GAME</li>
-        <li>LINK TO SECOND GAME</li>
+				<li><a href="../ticTacToe.html">Tic Tac Toe</a></li>
+        <li><a href="../simon.html">Simon</a></li>
         <li>...</li>
       </ul>
     </nav>
